--- a/Sharepoint_to_Lakehouse_notebook.ipynb
+++ b/Sharepoint_to_Lakehouse_notebook.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🚀 Setup Instructions\n",
+    "## Setup Instructions\n",
     "\n",
     "### Step 1: Get SharePoint Sharing Links\n",
     "For each Excel file you want to sync:\n",
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📦 Core Functions\n",
+    "## Core Functions\n",
     "\n",
     "The following cells define the ETL functions. **No changes needed in this section.**\n",
     "\n",
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ▶️ Execute ETL\n",
+    "## Execute ETL\n",
     "\n",
     "Run the cell below to start the ETL process.\n",
     "\n",
@@ -434,7 +434,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 📅 Scheduling\n",
+    "## Scheduling\n",
     "\n",
     "To run this notebook automatically:\n",
     "1. Create a Fabric Pipeline\n",
